tests/paczka2/big_fuzzy/25652709.err
Error in line 17: zh59Bz=mWU4 A157 49,1
Error in line 8: FNBvO A157 57,5
Error in line 16: S1ZIxE8 S679 72,0
Error in line 15: zh59BzfmWU4 S774 66,7
Error in line 23: J95q3LFlJPB A187 2,9
Error in line 28: zh59BzfmWU4 A157 15,2
Error in line 36: J95q3LFlJPB A187 86,6
Error in line 32: 6H3mgb3SXj S774 6,2
Error in line 51: FNBvO S774 33,8
Error in line 59: S1ZIxE8 A157 68,1
Error in line 62: FNBvO A157 11,1
Error in line 74: 6H3mgb3SXj A187 15,7
Error in line 67: S1ZIxE8 A187 94,3
Error in line 89: zh59BzfmWU4 S774 45,8
Error in line 97: S6!9 A18! 140,!
Error in line 99: zh59BzfmWU4 S679 344,68
Error in line 93: S679 A187 90,8
Error in line 106: 6H3mgb3SXj S774 37,0
Error in line 114: S679 S679 87,3
Error in line 116: J95q3LFlJPB A187 99,18
Error in line 117: FNBvO S774 0,8
Error in line 111: J95q3LFlJPB A187 47,4
Error in line 115: S679 S774 83,7
Error in line 133: zh59BzfmWU4 A157 63,3
Error in line 131: J95q3LFlJPB S774 2,1
Error in line 141: J95q3LFlJPB A157 98,9
Error in line 129: S1ZIxE8 S774 25,7
Error in line 152: S1ZIxE8 S679 51,1
Error in line 137: S679 S774 26,6
Error in line 153: S1ZIxE8 S774 76,5
Error in line 169: zh59BzfmWU4 A187 453,3
Error in line 167: J95q3LFlJPB S679 45,3
Error in line 175: bbAW A157 37,5
Error in line 184: FNBvO A157 59,9
Error in line 203: zh59BzfmWU4 S774 196,1
Error in line 233: bbAW S679 16,1
